--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 android {
     namespace 'com.example.opsc_poe'
     compileSdk 33
+    viewBinding.enabled = true
 
     defaultConfig {
         applicationId "com.example.opsc_poe"
@@ -22,9 +23,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    buildFeatures {
-        viewBinding = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
