--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
     implementation 'androidx.test:core-ktx:1.4.0'
     implementation 'androidx.camera:camera-lifecycle:1.0.2'
+    implementation 'androidx.camera:camera-view:1.2.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
+    implementation 'androidx.camera.camera2:camera2:1.1.0-alpha07'
+    implementation 'androidx.camera.lifecycle:camera-lifecycle:1.1.0-alpha07'
+    implementation 'androidx.camera.view:camera-view:1.1.0-alpha07'
 
 
 }
