--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature android:name = "android.hardware.camera.any"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera.any" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".GlobalClass"
@@ -15,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OPSC_POE"
         tools:targetApi="31">
+        <activity
+            android:name=".HomeScreen"
+            android:exported="false" />
         <activity
             android:name=".LogsCategory"
             android:exported="false" />
