--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.OPSC_POE"
         tools:targetApi="31">
         <activity
+            android:name=".CalendarLogs"
+            android:exported="false" />
+        <activity
             android:name=".AddLog"
             android:exported="false" />
         <activity
