--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:targetApi="31">
         <activity
             android:name=".CalendarLogs"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".AddLog"
             android:exported="false" />
@@ -27,9 +27,6 @@
             android:exported="false" />
         <activity
             android:name=".LogsCategory"
-            android:exported="false" />
-        <activity
-            android:name=".LogsCalender"
             android:exported="false" />
         <activity
             android:name=".LogsList"
