--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 
 
 
