--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.OPSC_POE"
         tools:targetApi="31">
         <activity
+            android:name=".settings_view"
+            android:exported="false" />
+        <activity
             android:name=".View_Activity_Logs_Fragment"
             android:exported="false" />
         <activity
@@ -68,7 +71,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".TimerService"></service>
+
+        <service android:name=".TimerService" />
     </application>
 
 </manifest>
